--- a/src/css/Navigation.module.css
+++ b/src/css/Navigation.module.css
@@ -43,6 +43,7 @@
   right: 0;
   left: 0;
   width: 100%;
+  height: 30vh;
   z-index: 1;
   color: var(--clr-light);
   background: var(--clr-dark);
