--- a/src/css/MyWork.module.css
+++ b/src/css/MyWork.module.css
@@ -42,6 +42,9 @@
   grid-gap: 2em;
 }
 
+/* #work {
+  padding: 6em 2em 6em 2em;
+} */
 .categories {
   display: flex;
   margin-bottom: 3em;
@@ -49,6 +52,7 @@
   padding: 0;
   flex-wrap: wrap;
   font-size: 1rem;
+  font-size: 0.7em;
 }
 .generic_categories {
   margin-top: 4em;
@@ -97,4 +101,10 @@
 .cover_text_date {
   font-size: 0.8em;
   font-style: italic;
+}
+
+@media screen and (min-width: 1000px) {
+  .categories {
+    font-size: 0.9em;
+  }
 }
