--- a/src/css/Navigation.module.css
+++ b/src/css/Navigation.module.css
@@ -6,7 +6,8 @@
 }
 .nav_toggle {
   position: fixed;
-  left: 90%;
+  /* left: 90%; */
+  right: 2em;
   top: 3%;
   z-index: 100;
   cursor: pointer;
@@ -27,7 +28,7 @@
   height: 2.5px;
   width: 2em;
   border-radius: 0.5em;
-  background: var(--clr-light);
+  background: var(--clr-background-dark);
   transition: transform 250ms ease-in-out;
 }
 .hamburger::before {
@@ -45,14 +46,14 @@
   width: 100%;
   height: 30vh;
   z-index: 1;
-  color: var(--clr-light);
-  background: var(--clr-dark);
+  color: var(--clr-dark-text);
+  background: var(--clr-background-light);
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
 .active_nav {
   padding-bottom: 3px;
-  border-bottom: 2px solid var(--clr-light);
+  border-bottom: 2px solid var(--clr-dark-text);
   pointer-events: none;
 }
 .open_nav.nav {
@@ -75,6 +76,7 @@
   margin: 0;
   padding: 0;
   height: 100%;
+  text-transform: uppercase;
   justify-content: space-around;
   align-items: center;
   list-style: none;
@@ -85,13 +87,13 @@
 .nav_item {
   margin: 0 1em;
 }
-.nav_item:first-of-type {
+/* .nav_item:first-of-type {
   margin-top: 1.5em;
-}
+} */
 .nav_link {
   color: inherit;
   text-decoration: none;
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
 }
 .nav_link::after,
 .category::after {
@@ -99,8 +101,8 @@
   display: block;
   height: 1px;
   width: 0;
-  color: var(--clr-light);
-  background: var(--clr-light);
+  color: var(--clr-dark-text);
+  background: var(--clr-dark-text);
   visibility: hidden;
   transition: width 300ms ease-in-out, visibility 300ms ease-in-out;
 }
@@ -123,22 +125,23 @@
     height: 0;
     transform: translateX(0);
     margin: 0 auto;
-    padding: 0 2em 0 2em;
-    max-width: 1100px;
+    /* padding: 0 2em 0 2em; */
+    /* max-width: 1100px; */
     top: 2em;
   }
   .nav_list {
-    justify-content: flex-start;
+    justify-content: flex-end;
     flex-direction: row;
     font-weight: var(--fw-reg);
-    font-size: var(--fs-body);
+    font-size: var(--fs-body-small);
+    margin-right: 2em;
   }
-  .nav_item:first-child {
+  /* .nav_item:first-child {
     margin-left: 0;
-  }
-  .nav_item:first-of-type {
+  } */
+  /* .nav_item:first-of-type {
     margin: inherit;
-  }
+  } */
 }
 .resize-animation-stopper * {
   animation: none !important;
