--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,12 +26,8 @@
   --clr-light-highlight-three: #6713f9;
   --clr-light-highlight-four: #b9e42b;
 
-  /* --clr-light: #fff;
-  --clr-dark: #000000;
-  --clr-grey: rgb(155, 155, 155);  */
-
   --fs-h1: 3rem;
-  --fs-h2: 2.25rem;
+  --fs-h2: 1.75rem;
   --fs-h3: 1.25rem;
   --fs-body: 1rem;
   --fs-body-small: 0.9rem;
@@ -44,7 +40,7 @@
 @media screen and (min-width: 800px) {
   :root {
     --fs-h1: 4.5rem;
-    --fs-h2: 3.75rem;
+    --fs-h2: 3rem;
     --fs-h3: 1.5rem;
     --fs-body: 1.1rem;
   }
@@ -109,60 +105,26 @@ h3 {
 /*General*/
 
 section {
-  padding: 2em 2em;
+  padding: 4em 2em;
   max-width: 1100px;
   margin: auto;
 }
-section:not(:first-of-type) {
+/* section:not(:first-of-type) {
   padding: 6em 2em 2em 2em;
 }
 section:last-of-type,
 #about {
   padding: 6em 4em 6em 4em;
-}
-section.cv-section {
-  padding: 7em 2em 0em 2em;
-}
-.cv_section {
-  padding: 7em 4em 0em 4em !important;
-}
-.section__title {
+} */
+.section_title {
   font-weight: var(--fw-reg);
-  font-style: italic;
-  color: red;
+  font-family: var(--ff-secondary);
+  font-weight: var(--fw-extra-bold);
+  color: var(--clr-dark-color-text);
   text-align: center;
+  margin-bottom: 1em;
 }
-.section__subtitle {
+/* .section_subtitle {
   font-size: var(--fs-h3);
   margin: 0;
-}
-.section__title::after,
-.section__title.section_cv::after {
-  content: '';
-  display: block;
-  height: 1px;
-  color: red;
-  background: var(--clr-background-light);
-  opacity: 1;
-}
-.section__title::after {
-  width: 1.5em;
-  margin: 0.5em auto 1em;
-}
-.section__title.section_cv::after {
-  width: 100%;
-}
-.left {
-  text-align: left;
-}
-.section_cv {
-  font-size: 1.25rem;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-@media screen and (min-width: 850px) {
-  .section_cv {
-    font-size: 2rem;
-  }
-}
+} */
