--- a/src/css/MyWork.module.css
+++ b/src/css/MyWork.module.css
@@ -1,13 +1,120 @@
+#work {
+  padding-top: 8em;
+}
+
+.categories {
+  display: flex;
+  margin-bottom: 3em;
+  margin-top: 0;
+  justify-content: center;
+  color: var(--clr-background-dark);
+  padding: 0;
+  flex-wrap: wrap;
+  font-size: 1rem;
+  font-size: 0.7em;
+}
+
+.category {
+  font-weight: var(--fw-extra-bold);
+  list-style: none;
+  padding: 0.5em 0.75em;
+  border-radius: 5px;
+  margin: 0 auto 1rem auto;
+  text-transform: uppercase;
+  transition: background-color 0.25s ease-in-out;
+  cursor: pointer;
+  background-color: var(--clr-background-light);
+}
+
+.category#software_development.active,
+.category#software_development.inactive:hover,
+.category#software_development.inactive:focus {
+  background-color: var(--clr-light-highlight-one);
+}
+.category#static_maps.active,
+.category#static_maps.inactive:hover,
+.category#static_maps.inactive:focus {
+  background-color: var(--clr-light-highlight-two);
+}
+
+.category.clicked.category.clicked {
+  pointer-events: none !important;
+}
+
+.category.active.canHover:hover,
+.category.active.canHover:focus {
+  background-color: var(--clr-background-light) !important;
+}
+
+.projects_container {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+  grid-gap: 2em;
+}
+.project {
+  display: flex;
+  flex-direction: column;
+}
+.portfolio_item {
+  /* background: var(--clr-grey); */
+  border-radius: 10px;
+  overflow: hidden;
+  transition: visibility 1s linear;
+  position: relative;
+  margin-bottom: 1rem;
+}
 .portfolio_img {
   transition: transform 750ms ease-in-out, opacity 250ms linear;
+  /* margin-bottom: 1rem; */
 }
-.invisible {
-  display: none;
+.portfolio_img:hover,
+.portfolio_item:focus .portfolio_img {
+  transform: scale(1.15);
+  opacity: 0.7;
 }
-.visible {
-  display: block;
+.description_container {
+  color: var(--clr-dark-color-text);
 }
-.portfolio_item_cover_text {
+.portfolio_date {
+  font-weight: var(--fw-bold);
+  font-style: italic;
+  font-size: 0.8rem;
+  margin-bottom: 0;
+}
+.portfolio_title {
+  margin-top: 0;
+  font-weight: var(--fw-extra-bold);
+  margin-bottom: 0.5em;
+}
+
+.portfolio_keywords {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  font-size: 0.6rem;
+  text-transform: uppercase;
+  font-weight: var(--fw-extra-bold);
+}
+.keyword {
+  padding: 0.5em;
+  border-radius: 5px;
+  margin: 0 0.75em 0.75em 0;
+}
+.keyword:last-of-type {
+  margin-right: 0;
+}
+.keyword.software_development {
+  color: var(--clr-dark-color-text);
+  background-color: var(--clr-light-highlight-four);
+}
+.keyword.static_maps {
+  color: var(--clr-bright-text);
+  background-color: var(--clr-light-highlight-three);
+}
+
+/* .portfolio_item_cover_text {
   display: block;
   position: absolute;
   top: 50%;
@@ -17,79 +124,44 @@
   color: rgb(0, 0, 0);
   transform: translate(-50%, -50%);
   font-weight: var(--fw-bold);
-  /* font-style: italic; */
   visibility: hidden;
   transition: visibility 250ms linear;
 }
 .portfolio_item_cover_text_show {
   visibility: visible;
-}
-.portfolio_item {
-  background: var(--clr-grey);
-  overflow: hidden;
-  transition: visibility 1s linear;
-  position: relative;
-}
-.portfolio_img:hover,
-.portfolio_item:focus .portfolio_img {
-  transform: scale(1.15);
-  opacity: 0.3;
-}
-.portfolio {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
-  grid-gap: 2em;
-}
-
-/* #work {
-  padding: 6em 2em 6em 2em;
 } */
-.categories {
-  display: flex;
-  margin-bottom: 3em;
-  justify-content: center;
-  padding: 0;
-  flex-wrap: wrap;
-  font-size: 1rem;
-  font-size: 0.7em;
-}
-.generic_categories {
-  margin-top: 4em;
-}
-.category {
-  color: var(--clr-light);
-  font-weight: var(--fw-bold);
-  list-style: none;
-  margin: 0 1em 1em;
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-  cursor: pointer;
-}
 
-.category::after {
-  content: '';
+@media screen and (min-width: 320px) {
+  .category {
+    margin: 0 1rem 1rem 1rem;
+  }
+}
+@media screen and (min-width: 600px) {
+  .categories {
+    font-size: 0.8em;
+  }
+}
+@media screen and (min-width: 800px) {
+  .categories {
+    font-size: 0.9em;
+  }
+  .portfolio_keywords {
+    font-size: 0.7rem;
+  }
+}
+/* .cover_text_date {
+  font-size: 0.8em;
+  font-style: italic;
+} */
+
+/* .invisible {
+  display: none;
+}
+.visible {
   display: block;
-  height: 1px;
-  width: 0;
-  color: var(--clr-light);
-  background: var(--clr-light);
-  visibility: hidden;
-  transition: width 300ms ease-in-out, visibility 300ms ease-in-out;
-}
+} */
 
-.category:hover::after,
-.category:focus::after {
-  visibility: visible;
-  width: 100%;
-}
-/* Exclude transition when the category is active */
-.category.active::after,
-.category.active:focus::after {
-  transition: width 0s ease-in-out, visibility 0s ease-in-out;
-}
-
-.active {
+/* .active {
   border-bottom: 1px solid var(--clr-light);
   pointer-events: none;
 }
@@ -97,14 +169,4 @@
   padding-bottom: 3px;
   border-bottom: 2px solid var(--clr-light);
   pointer-events: none;
-}
-.cover_text_date {
-  font-size: 0.8em;
-  font-style: italic;
-}
-
-@media screen and (min-width: 1000px) {
-  .categories {
-    font-size: 0.9em;
-  }
-}
+} */
