--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -1,44 +1,68 @@
 footer {
-  color: var(--clr-dark);
-  background: var(--clr-light);
+  color: var(--clr-dark-color-text);
+  background-color: var(--clr-background-dark);
+  /* color: var(--clr-dark-color-text); */
+  /* background-color: var(--clr-background-light); */
   text-align: center;
   padding: 3em 1em;
 }
-footer a {
-  color: inherit;
-}
-.footer_link {
-  text-decoration: none;
-  color: var(--clr-dark);
-  font-size: var(--fs-h3);
-  font-weight: var(--fw-bold);
-  font-size: 1.1em;
-}
-.footer_link:hover,
-.social_list_link:hover {
-  opacity: 0.6;
-}
-.footer_link:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-.social_list {
+.footer_list {
   list-style: none;
   display: flex;
   justify-content: center;
   padding: 0;
-  margin: 2em 0 0;
+  margin: 2em 0 0.5em 0;
 }
-.social_list_item {
+.footer_item {
   margin: 0 0.5em;
 }
-.social_list_link {
+.footer_link {
   padding: 0.5em;
+  color: inherit;
 }
-.credits {
-  font-size: var(--fs-h4);
-  font-weight: var(--fw-bold);
+
+.footer_link:hover {
+  opacity: 0.6;
+  cursor: pointer;
 }
 .footer_icon {
-  font-size: 1.25em;
+  font-size: 1.5em;
+  color: var(--clr-bright-text);
+}
+.description_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* color: var(--clr-dark-color-text); */
+  font-weight: var(--fw-bold);
+  color: var(--clr-bright-text);
+}
+.copyright {
+  font-size: 0.8rem;
+}
+.copyright:last-of-type {
+  margin-top: 0;
+}
+
+@media screen and (min-width: 310px) {
+  .description_container {
+    flex-direction: row;
+  }
+  .copyright:last-of-type {
+    margin-top: 1em;
+  }
+  .copyright:first-of-type {
+    margin-right: 1.5em;
+  }
+  .footer_icon {
+    font-size: 1.75em;
+  }
+}
+@media screen and (min-width: 400px) {
+  .copyright {
+    font-size: 0.9rem;
+  }
+  .footer_icon {
+    font-size: 2em;
+  }
 }
