--- a/src/css/MyWork.module.css
+++ b/src/css/MyWork.module.css
@@ -49,7 +49,7 @@
 .projects_container {
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 315px));
   grid-gap: 2em;
 }
 .project {
@@ -57,16 +57,23 @@
   flex-direction: column;
 }
 .portfolio_item {
-  /* background: var(--clr-grey); */
   border-radius: 10px;
   overflow: hidden;
   transition: visibility 1s linear;
   position: relative;
   margin-bottom: 1rem;
+  width: 100%;
+  padding-top: 100%;
 }
+/* Ensure that a square aspect ratio is preserved*/
 .portfolio_img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   transition: transform 750ms ease-in-out, opacity 250ms linear;
-  /* margin-bottom: 1rem; */
 }
 .portfolio_img:hover,
 .portfolio_item:focus .portfolio_img {
