--- a/src/css/Navigation.module.css
+++ b/src/css/Navigation.module.css
@@ -1,5 +1,7 @@
 /*Hamburger icon*/
-
+.no_scroll {
+  overflow-y: hidden;
+}
 .nav_toggle,
 .nav_link {
   outline: none;
@@ -50,11 +52,7 @@
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
-.active_nav {
-  padding-bottom: 3px;
-  border-bottom: 2px solid var(--clr-dark-color-text);
-  pointer-events: none;
-}
+
 .open_nav.nav {
   transform: translateX(0);
 }
@@ -83,35 +81,35 @@
   font-weight: var(--fw-bold);
   font-size: var(--fs-h3);
 }
+
 .nav_item {
   margin: 0 1em;
 }
-
+.active_nav {
+  pointer-events: none;
+}
 .nav_link {
   color: inherit;
   text-decoration: none;
 }
-.nav_link::after,
-.category::after {
+
+.nav_link::after {
   content: '';
   display: block;
-  height: 1px;
+  height: 1.5px;
   width: 0;
   color: var(--clr-dark-color-text);
   background: var(--clr-dark-color-text);
   visibility: hidden;
   transition: width 300ms ease-in-out, visibility 300ms ease-in-out;
 }
+.nav_link.active_nav::after,
 .nav_link:hover::after,
-.nav_link:focus::after,
-.category:hover::after,
-.category:focus::after {
+.nav_link:focus::after {
   visibility: visible;
   width: 100%;
 }
-.no_interactivity {
-  pointer-events: none;
-}
+
 @media screen and (min-width: 800px) {
   .nav_toggle {
     display: none;
@@ -126,12 +124,8 @@
   .nav_list {
     justify-content: flex-end;
     flex-direction: row;
-    font-weight: var(--fw-reg);
+    font-weight: var(--fw-bold);
     font-size: var(--fs-body-small);
     margin-right: 3em;
   }
-}
-.resize-animation-stopper * {
-  animation: none !important;
-  transition: none !important;
 }
