map added, no interaction

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -17,6 +17,7 @@
 
   --clr-background-light: #fffbf7;
   --clr-background-dark: #174538;
+  /* --clr-background-dark: #d7d7d7; */
 
   --clr-bright-text: #fffbf7;
   --clr-dark-text: #4e4941;
