--- a/src/css/MyWork.module.css
+++ b/src/css/MyWork.module.css
@@ -64,6 +64,7 @@
   margin-bottom: 1rem;
   width: 100%;
   padding-top: 100%;
+  background-color: var(--clr-dark-color-text);
 }
 /* Ensure that a square aspect ratio is preserved*/
 .portfolio_img {
@@ -78,7 +79,7 @@
 .portfolio_img:hover,
 .portfolio_item:focus .portfolio_img {
   transform: scale(1.15);
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .description_container {
   color: var(--clr-dark-color-text);
