--- a/src/css/Navigation.module.css
+++ b/src/css/Navigation.module.css
@@ -8,8 +8,8 @@
 }
 .nav_toggle {
   position: fixed;
-  right: 3em;
-  top: 3%;
+  right: 2.5rem;
+  top: 1.5rem;
   z-index: 100;
   cursor: pointer;
   background: transparent;
@@ -119,7 +119,7 @@
     height: 0;
     transform: translateX(0);
     margin: 0 auto;
-    top: 2.5em;
+    top: 2.5rem;
   }
   .nav_list {
     justify-content: flex-end;
