map style changed

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,7 +27,7 @@
   --clr-light-highlight-two: #e7dafe;
   --clr-light-highlight-three: #7c33fa;
   --clr-light-highlight-four: #b9e42b;
-  /* --clr-project-category: #eef8cc; */
+  /* --clr-project-category: rgb(94, 94, 94); */
 
   --fs-h1: 3rem;
   --fs-h2: 1.75rem;
