--- a/src/css/AboutMe.module.css
+++ b/src/css/AboutMe.module.css
@@ -88,16 +88,16 @@
   left: 2rem;
   margin: 0;
   font-size: 1.5rem;
-  max-width: 100px;
+  max-width: 75px;
   font-weight: var(--fw-extra-bold);
   font-family: var(--ff-secondary);
   color: var(--clr-dark-color-text);
+  word-break: break-word;
 }
 .slider_icon {
   font-size: 1rem;
   color: var(--clr-background-dark);
 }
-
 @media screen and (min-width: 270px) {
   .year_counter {
     max-width: 150px;
@@ -113,12 +113,15 @@
   .active_city {
     font-size: 1.75rem;
   }
+  .year_counter {
+    max-width: 100%;
+  }
 }
 @media screen and (min-width: 800px) {
   .year_counter {
     position: initial;
     font-size: 1.9rem;
-    max-width: 100%;
+
     margin: 5rem 0 2rem 0;
   }
   .loading_text {
