viewport height mobile fixed

--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -3,7 +3,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  height: 100lvh;
+  height: 100svh;
   /* map scale: 1:8k */
   background-image: url('../resources/img/home/1_8k.jpg');
   background-repeat: no-repeat;
