--- a/src/css/AboutMe.module.css
+++ b/src/css/AboutMe.module.css
@@ -1,9 +1,12 @@
 .page_container {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  height: 100svh;
 }
 .map_container {
   height: 80vh;
+  height: 80svh;
   width: 100vw;
   position: relative;
 }
@@ -31,7 +34,9 @@
 
 .slider_container {
   width: 100%;
-  height: 20vh;
+  height: 20%;
+  /* height: 20vh;
+  height: 20svh; */
   color: var(--clr-background-dark);
   display: flex;
   flex-direction: column;
@@ -40,6 +45,7 @@
 }
 .active_city {
   margin: auto;
+  /* margin-bottom: 2rem; */
   font-size: 1.5rem;
   font-weight: var(--fw-extra-bold);
   font-family: var(--ff-secondary);
@@ -121,11 +127,11 @@
     max-width: 150px;
   }
 }
-@media screen and (min-width: 300px) {
+/* @media screen and (min-width: 300px) {
   .slider_container {
     padding: 2rem 1rem;
   }
-}
+} */
 @media screen and (min-width: 400px) {
   .year_counter,
   .active_city {
@@ -159,7 +165,9 @@
   }
 
   .map_container {
-    height: 100vh;
+    /* height: 100vh;
+    height: 100svh; */
+    height: 100%;
   }
   .timeline_container {
     display: flex;
