--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,11 +13,9 @@
   --fw-reg: 300;
   --fw-bold: 500;
   --fw-extra-bold: 700;
-  /* --fw-extra-extra-bold: 800; */
 
   --clr-background-light: #fffbf7;
   --clr-background-dark: #174538;
-  /* --clr-background-dark: #d7d7d7; */
 
   --clr-bright-text: #fffbf7;
   --clr-dark-text: #4e4941;
@@ -27,7 +25,6 @@
   --clr-light-highlight-two: #e7dafe;
   --clr-light-highlight-three: #7c33fa;
   --clr-light-highlight-four: #b9e42b;
-  /* --clr-project-category: rgb(94, 94, 94); */
 
   --fs-h1: 3rem;
   --fs-h2: 1.75rem;
@@ -52,7 +49,7 @@
 /* General styles*/
 
 html {
-  scroll-behavior: smooth;
+  -webkit-tap-highlight-color: transparent;
 }
 body {
   overflow-x: hidden;
@@ -81,10 +78,6 @@ img {
   pointer-events: all;
   opacity: 1;
 }
-/* :focus {
-  outline: 3px solid 'red';
-  outline-offset: 3px;
-} */
 
 /*Typography*/
 
